<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/buttons_main"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/pk_game_center"/>

    <LinearLayout
        android:id="@+id/buttons_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

            <Button
                android:id="@+id/b2048"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_2048"
                app:icon="@drawable/ic_game" />

            <Button
                android:id="@+id/bLightsOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lights_out"
                app:icon="@drawable/ic_game" />

        <Button
            android:id="@+id/bSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>


</RelativeLayout>