<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/user_settings"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/titleuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/useredit"
            android:text="@string/user"/>
        <LinearLayout
            android:id="@+id/useredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guest"
                style="@style/TextAppearance.AppCompat.Large"/>

            <ImageButton
                android:id="@+id/edit_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="#00000000"
                android:src="@drawable/ic_edit"
                app:tint="@color/venetian_red"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/user_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:icon="@drawable/ic_person_add"/>

        <Button
            android:id="@+id/user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            app:icon="@drawable/ic_login"/>

        <Button
            android:id="@+id/user_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            app:icon="@drawable/ic_logout"/>

    </LinearLayout>

</RelativeLayout>